<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyStoryApp</string>
    <string name="welcome_title">Welcome to My Story App</string>
    <string name="auth_log_in">Login</string>
    <string name="auth_sign_up">Sign Up</string>
    <string name="auth_name">Name</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_pass_error">Password can\'t be less than 8 characters</string>
    <string name="auth_error">One or more input(s) is not valid</string>
    <string name="auth_blank">Name, Email, and Password cannot be empty</string>
    <string name="auth_blank_login">Name and Password cannot be empty</string>
    <string name="login_error">"Login Error: "</string>
    <string name="login_success">"Login Success: "</string>
    <string name="register_error">"Register Error: "</string>
    <string name="register_success">"Register Success: "</string>
    <string name="load_error">"Loading Error: "</string>
    <string name="auth_logout">Log out</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="auth_logout_warning">Are you sure want to Log out?</string>
    <string name="story_description">Let\'s explore Story app!</string>
    <string name="story_camera">Camera</string>
    <string name="story_gallery">Gallery</string>
    <string name="story_add">Add Story</string>
    <string name="story_desc">Description</string>
    <string name="permission_denied">Not getting any Permission.</string>
    <string name="story_add_warning">Please add image from Gallery or Camera first.</string>
    <string name="story_choose_gallery">Choose a Picture</string>
    <string name="story_add_error">"Error adding story: "</string>
    <string name="add_story_success">"Add story "</string>
    <string name="menu_maps">Maps</string>
    <string name="title_activity_maps">@string/app_name</string>
    <string name="maps_default_marker">Marker in Jakarta</string>
    <string name="maps_normal_type">Normal</string>
    <string name="maps_satellite_type">Satellite</string>
    <string name="maps_terrain_type">Terrain</string>
    <string name="maps_hybrid_type">Hybrid</string>
</resources>
